# primordialmachine

./: .gitignore  CMakeLibrary.cmake  CMakeLists.txt  README.md  appveyor-develop.yml  appveyor-master.yml  appveyor-release.yml  appveyor.yml
experimental/service/: CMakeLists.txt  FileSystemRoots.c  FileSystemRoots.h  main.c
libraries/: CMakeLists.txt
libraries/aal/documentation/sources/: index.php
libraries/al/: CMakeLists.txt  Doxyfile  README.md
libraries/al/dx/aal/: al.c  al.h
libraries/asset-definition-language/: CMakeLists.txt  README.md
libraries/asset-definition-language/dx/: adl.c  adl.h  asset_definition_language.c  asset_definition_language.h
libraries/asset-definition-language/dx/adl/: context.c  context.h  diagnostics.c  diagnostics.h  enter.c  enter.h  names.c  names.h  names.i  parser.c  parser.h  resolve.c  resolve.h  symbols.c  symbols.h  type_handler.c  type_handler.h
libraries/assets/: CMakeLists.txt  Doxyfile  README.md
libraries/assets/Core/Assets/: ColorRgbN8.c  ColorRgbN8.h  Def.c  Def.h  Image.c  Image.h  ImageOperation.c  ImageOperation.h  Matrix4x4R32.c  Optics.c  PerspectiveOptics.c  PerspectiveOptics.h  Ref.c  Ref.h
libraries/assets/dx/: assets.h
libraries/assets/dx/assets/: color_rgb_n8.c  color_rgb_n8.h  context.c  context.h  image.c  image.h  image_operation.c  image_operation.h  material.c  material.h  material_controller.c  material_controller.h  matrix_4x4_f32.c  matrix_4x4_f32.h  mesh.c  mesh.h  mesh_instance.c  mesh_instance.h  mesh_operation.c  mesh_operation.h  optics.c  optics.h  reference.c  reference.h  scene.c  scene.h  system.c  system.h  system_factory.c  system_factory.h  texture.c  texture.h  vector_3_f32.c  vector_3_f32.h  viewer.c  viewer.h  viewer_controller.c  viewer_controller.h  viewer_instance.c  viewer_instance.h
libraries/assets/tests/: CMakeLists.txt
libraries/core/: CMakeLists.txt  Doxyfile  README.md
libraries/core/documentation/: dx_cos.md  dx_is_infinity.md  dx_min.md  dx_sin.md  mainpage.dox
libraries/core/documentation/sources/: index.css  index.php
libraries/core/dx/: core.h
libraries/core/dx/core/: _get_best_array_size.c  _get_best_array_size.h  _is_utf8_sequence.h  annotations.h  builtin_types.h  byte_array.c  byte_array.h  canvas_msgs.c  canvas_msgs.h  concepts.md  configuration.c  configuration.h  convert.c  convert.h  core.c  count_leading_zeroes.c  error.h  file_system.c  file_system.h  hapticals.c  hapticals.h  inline_object_array.c  inline_object_array.h  inline_pointer_array.c  inline_pointer_array.h  inline_pointer_deque.c  inline_pointer_deque.h  inline_pointer_hashmap.c  inline_pointer_hashmap.h  keyboard_keys.i  keyboard_state.c  keyboard_state.h  math.c  math.h  memory.h  mouse_state.c  mouse_state.h  msgs.c  msgs.h  next_power_of_two.c  (+22 more)
libraries/core/tests/: CMakeLists.txt
libraries/data-definition-language/: CMakeLists.txt  Doxyfile  README.md
libraries/data-definition-language/documentation/sources/: index.php
libraries/data-definition-language/dx/: data_definition_language.c  data_definition_language.h
libraries/data-definition-language/dx/data_definition_language/: node_kind.i  word_kind.c  word_kind.h  word_kind.i
libraries/data-definition-language/dx/ddl/: configuration.c  diagnostics.c  diagnostics.h  linemap.c  linemap.h  node.c  node.h  parser.c  parser.h  scanner.c  scanner.h  word.c  word.h
libraries/document-definition-language/: CMakeLists.txt  Doxyfile  README.md
libraries/document-definition-language/dx/: document.c  document.h  document_definition_language.c  document_definition_language.h
libraries/engine/: CMakeLists.txt  Doxyfile  README.md
libraries/engine/dx/: adl.c  adl.h  application.c  application.h  application_presenter.c  application_presenter.h  cl_interpreter.c  cl_interpreter.h  console.c  console.h  engine.h  font_manager.c  font_manager.h  font_presenter.c  font_presenter.h  fps_counter.c  fps_counter.h  presenter.c  presenter.h  rectangle_presenter.c  rectangle_presenter.h  scene_presenter.c  scene_presenter.h  system.c  system.h  system_factory.c  system_factory.h  utilities_2d.c  utilities_2d.h  val.c
libraries/gl/: CMakeLists.txt  Doxyfile  README.md
libraries/gl/dx/val/: gl.c  (+1 more)
player/: CMakeLists.txt  Doxyfile  README.md  assets.md  main.c
player/assets/: day11-quadriliteral.adl  day11-triangle.adl  day12-quadriliteral.adl  day12-triangle.adl  day13-quadriliteral.adl  day13-triangle.adl  day15-quadriliteral.adl  day15-triangle.adl  day16-quadriliteral.adl  day16-triangle.adl  day17-cube.adl  day17-octahedron.adl  day18-cube.adl  day18-octahedron.adl  day19-cube-loaded-texture.adl  day19-octahedron-loaded-texture.adl  day8-empty.adl
player/assets/console/: configuration.ddl  console.ui
player/assets/gl/: 3.fs  3.vs  console-background.fs  font.fs  font.vs  rectangle.fs  rectangle.vs
player/assets/scenes/: day1.empty.adl  day10.font.adl  day2.quadriliteral.adl  day2.triangle.adl  day3.quadriliteral.adl  day3.triangle.adl  day4.quadriliteral.adl  day4.triangle.adl  day5.quadriliteral.adl  day5.triangle.adl  day6.quadriliteral.adl  day6.triangle.adl  day7.cube.adl  day7.octahedron.adl  day8.cube.adl  day8.octahedron.adl  day9.cube.loaded-texture.adl  day9.octahedron.loaded-texture.adl
player/dx/engine/: console_commands.c  console_commands.h  default_console.c  default_console.h  font_presenter.c  font_presenter.h  overlay.c  overlay.h  rectangle_presenter.c  rectangle_presenter.h  utilities_2d.c  utilities_2d.h
player/dx/player/: configuration.h  default_application_presenter.c  default_application_presenter.h  run.c  run.h
player/dx/scenes/: create_assets.c  create_assets.h  default_scene_presenter.c  default_scene_presenter.h
player/sources/: main.c
plugins/freetype-plugin/plugin/: CMakeLists.txt
plugins/freetype-plugin/test/: CMakeLists.txt
plugins/libpng-plugin/plugin/: CMakeLists.txt
plugins/libpng-plugin/test/: CMakeLists.txt  libpng-plugin.h  main.c
plugins/wic-plugin/plugin/: CMakeLists.txt
plugins/wic-plugin/test/: CMakeLists.txt  main.c
tools/FontAtlasDumper/: CMakeLists.txt
(+847 files in other folders)
