# Copyright (c) 2023 Michael Heilmann. All rights reserved.
# Author: Michael Heilmann (michaelheilmann@primordialmachine.com
# Copyright Copyright (c) 2023 Michael Heilmann. All rights reserved.

cmake_minimum_required(VERSION 3.20)

add_subdirectory(assets)
add_subdirectory(core)
add_subdirectory(data-definition-language)
add_subdirectory(document-definition-language)
add_subdirectory(gl)
add_subdirectory(al)
add_subdirectory(engine)
add_subdirectory(asset-definition-language)
