# Copyright (c) 2023-2024 Michael Heilmann. All rights reserved.
# Author: Michael Heilmann (michaelheilmann@primordialmachine.com
# Copyright: Copyright (c) 2023-2024 Michael Heilmann. All rights reserved.

cmake_minimum_required(VERSION 3.20)


add_subdirectory(library)
add_subdirectory(tests)
